manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argoapp
---
kind: Namespace
apiVersion: v1
metadata:
  name: argocd
  labels:
    name: argocd
