manifests/argoapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: argoapp
  name: argoapp-deployment
  labels:
    app: argoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argoapp
  template:
    metadata:
      labels:
        app: argoapp
    spec:
      containers:
      - name: nginxapp
        image: ddeeh/argogitops:1.4
        ports:
        - containerPort: 80
