manifests/argoapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: argoapp
  name: argoapp-svc
  labels:
    app: argoapp
spec:
  type: ClusterIP
  selector:
    app: argoapp
  ports:
    - protocol: TCP
      # nodePort: 30080
      port: 80
      targetPort: 80
